force-app/main/default/objects/ProcessTask__c/ProcessTask__c.object-meta.xml
<CustomObject>
    <description>A Task to be performed within a Process</description>
    <label>Process Task</label>
    <nameField>
        <label>Process Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>