force-app/main/default/objects/ProcessTask__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Process associated with this ProcessTask</description>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Process Tasks</relationshipLabel>
    <relationshipName>ProcessTasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>