force-app/main/default/objects/ProcessTask__c/fields/SequentialOrder__c.field-meta.xml
<CustomField>
    <fullName>SequentialOrder__c</fullName>
    <description>Order that the task stands in the process where it belongs</description>
    <label>Sequential Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>